add form and some inputs

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -13,6 +13,12 @@ body {
   }
 }
 
+@layer components {
+  .no-scroll::-webkit-scrollbar {
+    @apply w-0
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
